compiler/testData/javaModules/releaseFlag/moduleSwing.txt
compiler/testData/javaModules/releaseFlag/moduleSwing/foo/Foo.kt:5:18: error: unresolved reference: swing
    konst z: javax.swing.JFrame? = null
                 ^
COMPILATION_ERROR
